Removed XX:MaxPermSize, warning with JDK8